feat: implement quarkus rest client